welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:35: error: not found: value c
					faireV3(c:Color) 
                                                ^